# MDCMfast

./: README.md  install.sh  pyproject.toml  setup.py
common/: test-mdcm-input.sh
examples/acem/: ESP.cube.mol.tga  acem2.xyz  test-gaussian.sh  test.fchk  test.gjf
examples/mdcm/example/: test-refine.sh
examples/ref/: h2o-dens_culled.cube  h2o-pot_culled.cube
examples/workflows/: README.md
examples/workflows/basic-fit/: 3_charges_refined.xyz  3charges.xyz  4_charges_refined.xyz  5_charges_refined.xyz  README  Snakefile  config.yaml  frames.txt  multipole1_1charges.xyz  multipole1_2charges.xyz  multipole1_3charges.xyz  multipole1_4charges.xyz  multipole2_1charges.xyz  multipole2_2charges.xyz  multipole2_3charges.xyz  multipole2_4charges.xyz  multipole3_1charges.xyz  multipole3_2charges.xyz  multipole3_3charges.xyz  multipole3_4charges.xyz  run.sh  setup.sh
mdcm/.ipynb_checkpoints/: test-mdcm-input-checkpoint.sh
mdcm/Benz/0-36/: dc.xyz  model.mdcm  refine.sh
mdcm/Benz/1-24/: dc.xyz
mdcm/Benz/10-36/: analyze.sh  dc.xyz  model.mdcm
mdcm/Benz/11-24/: analyze.sh  dc.xyz  model.mdcm  model.sh
mdcm/Benz/2-48/: dc.xyz  frames.txt  model.sh  refine.sh
mdcm/example/: 18_charges_refined.xyz
mdcm_fast/: cubes.py  dcmnet_predictions.py
mdcm_fast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mdcm_fast/.ipynb_checkpoints/: frames-checkpoint.py
notebooks/: dc.xyz  kmdcm.ipynb  mdcm-fast.ipynb  test-pymdcm.py
notebooks/.ipynb_checkpoints/: dc-checkpoint.xyz  kmdcm-checkpoint.ipynb  mdcm-fast-checkpoint.ipynb
src/mdcmfast/: __init__.py
(+350 files in other folders)
