[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdcmfast"
version = "0.1.0"
description = "Creating minimal distributed charge models for accurate electrostatics for atomistic models"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "ase",
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "tqdm",
    "matplotlib",
    "e3x",
    "patchworklib",
    "networkx",
    "rdkit",
    "jupyter",
    "ipykernel",
    "snakemake",
    "papermill[all]",
    "polars",
    "pandas",
    "meson",
    "ninja",
    "jinja2",
    "dcmnet @ git+https://github.com/EricBoittier/dcmnet.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mdcmfast"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
